--- a/WiFiLibrary/src/main/AndroidManifest.xml
+++ b/WiFiLibrary/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         >
 
         <!-- 监听网络状态的广播接收者 -->
-        <receiver android:name="com.kongqw.wifilibrary.WiFiManager$NetworkBroadcastReceiver">
+        <!-- <receiver android:name="com.kongqw.wifilibrary.WiFiManager$NetworkBroadcastReceiver">
             <intent-filter>
                 <!-- AP扫描完成，客户端得到可用的结果集 -->
                 <action android:name="android.net.wifi.SCAN_RESULTS"/>
@@ -25,7 +25,7 @@
                 <action android:name="android.net.wifi.supplicant.STATE_CHANGE"/>
                 <action android:name="android.net.wifi.supplicant.CONNECTION_CHANGE"/>
             </intent-filter>
-        </receiver>
+        </receiver> -->
 
     </application>
 
